--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "nodejs",
+  "name": "Magic bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Arsyad",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
+    "express": "^4.19.1",
     "moment-timezone": "^0.5.45",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.65.1"
